--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-  --color-yellow: hsl(47, 88, 63);
-  --color-gray-950: hsl(0, 0, 7);
-  --color-gray-500: hsl(0, 0, 42);
-  --color-white: hsl(0, 0, 100);
+  --color-yellow: hsl(47, 88%, 63%);
+  --color-gray-950: hsl(0, 0%, 7%);
+  --color-gray-500: hsl(0, 0%, 42%);
+  --color-white: hsl(0, 0%, 100%);
 
   --spacing-xsm: 4px;
   --spacing-sm: 8px;
@@ -18,4 +18,103 @@
 
 body {
   font-family: 'Figtree', serif;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-yellow);
+}
+
+h1,
+p {
+  padding: 0;
+  margin: 0;
+}
+
+.blog-card {
+  width: 327px;
+  margin: 0 auto;
+  padding: var(--spacing-lg);
+  border: 1px solid var(--color-gray-950);
+  border-radius: 20px;
+  background-color: var(--color-white);
+  box-shadow:
+    #000  var(--spacing-sm) var(--spacing-sm);
+  cursor: pointer;
+}
+
+.blog-card:hover .blog-card--title {
+  color: var(--color-yellow);
+}
+
+.blog-card--tag {
+  display: inline-block;
+  padding: var(--spacing-xsm) var(--spacing-md);
+  background-color: var(--color-yellow);
+  border-radius: var(--spacing-xsm);
+  margin: var(--spacing-lg) 0 var(--spacing-md);
+
+  font-size: 12px;
+  font-weight: 800;
+  line-height: 150%;
+}
+
+.blog-card--date {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 150%;
+  color: var(--color-gray-950);
+}
+
+.blog-card--title {
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 150%;
+  color: var(--color-gray-950);
+  margin: var(--spacing-md) 0 var(--spacing-md);
+}
+
+.blog-card--description {
+  font-size: 14px;
+  color: var(--color-gray-500);
+  line-height: 150%;
+}
+
+.blog-card > img {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.blog-card--author {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: var(--spacing-md);
+  margin-top: var(--spacing-lg);
+}
+
+.blog-card--author img {
+  width: 32px;
+  height: 32px;
+}
+
+.blog-card--author p {
+  font-size: 14px;
+  font-weight: 800;
+}
+
+@media (min-width: 1440px) {
+
+  .blog-card {
+    width: 384px;
+  }
 }
