--- a/style.css
+++ b/style.css
@@ -17,20 +17,17 @@
 }
 
 body {
-  font-family: 'Figtree', serif;
-  padding: 0;
+  font-family: 'Figtree', sans-serif;
+  padding: 16px;
   margin: 0;
-  width: 100vw;
-  height: 100vh;
-}
-
-main {
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   align-items: center;
   justify-content: center;
   background-color: var(--color-yellow);
+  line-height: 1.5;
 }
 
 a:link,
@@ -48,8 +45,7 @@ p {
 }
 
 .blog-card {
-  width: 327px;
-  margin: 0 auto;
+  max-width: 24rem;
   padding: var(--spacing-lg);
   border: 1px solid var(--color-gray-950);
   border-radius: 20px;
@@ -72,28 +68,24 @@ p {
 
   font-size: 12px;
   font-weight: 800;
-  line-height: 150%;
 }
 
 .blog-card--date {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 500;
-  line-height: 150%;
   color: var(--color-gray-950);
 }
 
 .blog-card--title {
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 800;
-  line-height: 150%;
   color: var(--color-gray-950);
   margin: var(--spacing-md) 0 var(--spacing-md);
 }
 
 .blog-card--description {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: var(--color-gray-500);
-  line-height: 150%;
 }
 
 .blog-card > img {
@@ -116,33 +108,23 @@ p {
 }
 
 .blog-card--author p {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 800;
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 90rem) {
 
-  .blog-card {
-    width: 384px;
-  }
-
-  .blog-card--tag {
-    font-size: 14px;
-  }
-
-  .blog-card--date {
-    font-size: 14px;
+  .blog-card--tag,
+  .blog-card--date,
+  .blog-card--author p {
+    font-size: 0.875rem;
   }
 
   .blog-card--title {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 
   .blog-card--description {
-    font-size: 16px;
-  }
-
-  .blog-card--author p {
-    font-size: 14px;
+    font-size: 1rem;
   }
 }
